Initial styling of page
created parent flexbox, added background color for header and footer and
header footer text color.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ice Queens Touring Co.</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="top-banner-container">
     <div class="header-bar">
-      <div class="header-logo">Ice Queens Touring Co.</div>
-      <ul class="header-links">
-        <li><a href="google.com">header link one</a></li>
-        <li><a href="google.com">header link two</a></li>
-        <li><a href="google.com">header link three</a></li>
+      <div class="header-footer-text header-logo">Ice Queens Touring Co.</div>
+      <ul class=" header-links">
+        <li><a class="header-footer-text" href="google.com">header link one</a></li>
+        <li><a class="header-footer-text" href="google.com">header link two</a></li>
+        <li><a class="header-footer-text" href="google.com">header link three</a></li>
       </ul>
     </div>
     <div class="top-banner-content">
       <div class="top-banner-left">
-        <h1>Touring made easy</h1>
-        <div class="subtext white-text">About to head off on tour? Let Ice Queens Touring Co. take care of the all the stress so you all you need to worry about is playing your best!</div>
+        <h1 class="header-footer-text">Touring made easy</h1>
+        <div class="subtext header-footer-text">About to head off on tour? Let Ice Queens Touring Co. take care of the all the stress so you all you need to worry about is playing your best!</div>
         <button class="signup-button">Book now</button> 
       </div> 
       <div class="top-banner-right">
@@ -65,7 +66,7 @@
     <div class="subtext white-text">Fill in the booking form to get started.</div>
     <button class="signup-button call-to-action-button">Book now</button>
   </div>
-  <div class="footer">
+  <div class="footer header-footer-text">
     Copyright © Nye Todd 
   </div>
 </body>
