Update credit and README
Updated credit to The Odin Project. Removed unused image files from
images folder. Updated README to give overview of project, skills unused
and potential future development ideas.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     
   </div>
   <div class="footer white-subtext">
-    Copyright © Nye Todd 
+    Copyright © The Odin Project 2021
   </div>
 </body>
 </html>
